# llm-seclint

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-27-llm-taint-mvp.md
docs/superpowers/specs/: 2026-06-27-llm-taint-engine-design.md
examples/: .llm-seclint.yml  vulnerable_app.py
src/llm_seclint/: cli.py  config.py
src/llm_seclint/analyzers/: base.py  python_analyzer.py  taint.py
src/llm_seclint/core/: engine.py  finding.py
src/llm_seclint/formatters/: sarif.py
src/llm_seclint/rules/: base.py  registry.py
src/llm_seclint/rules/python/: dependency_pinning.py  hardcoded_keys.py  insecure_deserialization.py  llm_path_traversal.py  llm_shell_injection.py  llm_sql_injection.py  prompt_injection.py  ssrf.py  ssti.py  xxe.py
tests/: test_cli.py  test_engine.py  test_finding.py  test_formatters.py  test_taint.py
tests/rules/: test_insecure_deserialization.py  test_llm_path_traversal.py  test_llm_shell_injection.py  test_llm_sql_injection.py  test_prompt_injection.py  test_ssrf.py  test_ssti.py  test_xxe.py
